back to original colours

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
-$brand-color:         #181515;
+$brand-color:         #fede00;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #e6e7d0;
-$muted-text-color:    #579941;
+$text-color:          #0b0404;
+$muted-text-color:    #64644B;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
