--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -9,7 +9,7 @@ code.highlighter-rouge {
 }
 
 .highlight {
-  background: #fff;
+  background: #181515;
   font-family: courier, monospace;
   font-size: .875em;
   margin: 2rem auto;
