trying new divider

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -4,6 +4,6 @@
   width: 152px;
   height: 12px;
   margin: .5em auto .5em;
-  background: url(#{$asset_url}/images/divider2.svg) no-repeat center;
+  background: url(#{$asset_url}/images/up-divider.svg) no-repeat center;
 
 }
