--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin divider {
   border: 0;
   display: block;
-  width: 53px;
-  height: 6px;
+  width: 153px;
+  height: 12px;
   margin: .5em auto .5em;
-  background: url(#{$asset_url}/images/sworddivider.svg) no-repeat center;
+  background: url(#{$asset_url}/images/divider2.svg) no-repeat center;
 
 }
